Fixed bugs Related to collapsed navbar

--- a/chat/static/sass/chat.sass
+++ b/chat/static/sass/chat.sass
@@ -508,7 +508,7 @@ ul#directUserTable
 		right: 0
 		background: transparent
 
-@media screen and (max-width: 35em)
+@media screen and (max-width: $collapse-width)
 	#wrapper
 		@include flex-direction(column-reverse)
 	#chat-room-users-wrapper
