--- a/chat/static/sass/themes/color-lor/_color-lor-chat.sass
+++ b/chat/static/sass/themes/color-lor/_color-lor-chat.sass
@@ -99,6 +99,6 @@
 		&.online
 			color: #53a045
 
-	@media screen and (max-width: 35em)
+	@media screen and (max-width: $collapse-width)
 		#chat-room-users-wrapper
 			border-bottom-color: $color-lor-scroll
