--- a/chat/static/sass/themes/color-reg/_color-reg-chat.sass
+++ b/chat/static/sass/themes/color-reg/_color-reg-chat.sass
@@ -173,6 +173,6 @@
 		&.online
 			color: #53a045
 
-	@media screen and (max-width: 35em)
+	@media screen and (max-width: $collapse-width)
 		#chat-room-users-wrapper
 			border-bottom-color: $mostly-black
